--- a/app/src/main/res/layout/activity_toolbar_layout.xml
+++ b/app/src/main/res/layout/activity_toolbar_layout.xml
@@ -29,8 +29,7 @@
             android:id="@+id/toolbar_spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            style="@style/TryAndRemoveTheme.Toolbar.Spinner" />
+            android:visibility="gone" />
 
     </android.support.v7.widget.Toolbar>
 
