--- a/app/src/main/res/layout/activity_toolbar_layout.xml
+++ b/app/src/main/res/layout/activity_toolbar_layout.xml
@@ -24,7 +24,8 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"/>
+        android:background="?attr/colorPrimary"
+        android:elevation="2dp" />
 
     <FrameLayout
         android:id="@+id/mainContent"
