--- a/app/src/main/res/layout/cell_app_list.xml
+++ b/app/src/main/res/layout/cell_app_list.xml
@@ -31,17 +31,24 @@
         card_view:cardCornerRadius="2dp"
         card_view:cardElevation="2dp">
 
-        <LinearLayout
+        <FrameLayout
+            android:id="@+id/app_list_cell_root_overlay"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:alpha="0.2"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
 
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:padding="8dp">
 
             <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="64dp"
+                android:layout_height="64dp">
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -87,6 +94,7 @@
 
             </LinearLayout>
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 
 </FrameLayout>
