--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2015 Markus Poeschl
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -17,14 +16,23 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <PreferenceCategory android:title="@string/preferences_crashlytics_section_title">
+    <PreferenceCategory android:title="@string/preferences_appearance_section_title">
+        <SwitchPreference
+            android:key="preferences_colored_cells_enabled"
+            android:title="@string/preferences_appearance_switch_title"
+            android:summary="@string/preferences_appearance_switch_summary"
+            android:persistent="false" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory android:title="@string/preferences_crashlytics_section_title">
         <SwitchPreference
             android:key="preferences_crashlytics_enabled"
             android:title="@string/preferences_crashlytics_switch_title"
             android:summary="@string/preferences_crashlytics_switch_summary"
-            android:persistent="false"/>
+            android:persistent="false" />
 
     </PreferenceCategory>
+
 
 </PreferenceScreen>
