--- a/app/src/main/res/layout/cell_app_list.xml
+++ b/app/src/main/res/layout/cell_app_list.xml
@@ -46,23 +46,17 @@
             android:orientation="horizontal"
             android:padding="8dp">
 
-            <FrameLayout
+            <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/app_list_cell_app_icon"
                 android:layout_width="64dp"
-                android:layout_height="64dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/round_frame" />
-
-                <ImageView
-                    android:id="@+id/app_list_cell_app_icon"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="6dp"
-                    android:src="@drawable/ic_launcher_app" />
-
-            </FrameLayout>
+                android:layout_height="64dp"
+                android:scaleType="fitCenter"
+                android:background="@color/background"
+                android:src="@drawable/ic_launcher_app"
+                app:riv_border_color="@color/primary_main"
+                app:riv_border_width="2dip"
+                app:riv_mutate_background="true"
+                app:riv_oval="true" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
